examples/test/testpolicy5613.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5613
  namespace: namespace452
spec:
  podSelector:
    matchLabels:
      key28: value47
      key10: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value46
      podSelector:
        matchLabels:
          key26: value0
          key32: value47
